# spinodal_omp

./: .gitignore  CMakeLists.txt  README.md
src/: prep_fft.c  prep_microstructure.c  rand_ZeroToOne.c  spinodal_omp.c  spinodal_omp.h  write_input_to_file.c  write_to_VTK.c
